# 3ds-pkm-dex-generator

./: Cargo.toml
src/: garc.rs  learnset.rs  main.rs  moves.rs  pokemon.rs  text.rs
