[package]
name = "usum-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
color-eyre = "0.6.2"
indexmap = { version = "1.9.3", features = ["serde"] }
serde = {version = "1.0.159", features = ["derive"]}
serde_json = {version = "1.0.95", features = ["preserve_order"]}
serde_with = "2.3.1"
